--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon sever.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,9 @@
   },
   "homepage": "https://github.com/AmirAshlag/betting-game-be#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "mysql": "^2.18.1",
-    "nodejs": "^0.0.0"
+    "nodejs": "^0.0.0",
+    "nodemon": "^2.0.20"
   }
 }
