--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "betting-game-be",
   "version": "1.0.0",
-  "description": "",
+  "description": "a",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon sever.js"
+    "start": "nodemon app"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/AmirAshlag/betting-game-be#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "nodejs": "^0.0.0",
     "nodemon": "^2.0.20"
